objects/product__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>discount__c</fullName>
        <label>discount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>exp_date__c</fullName>
        <formula>DATE(YEAR(manu_date__c)+(VALUE(Text(validity__c))/10),MONTH(manu_date__c),DAY(manu_date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>exp_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>manu_date__c</fullName>
        <label>manu_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>price__c</fullName>
        <label>price</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>product_id__c</fullName>
        <displayFormat>p-{0000}</displayFormat>
        <label>product_id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>product_name__c</fullName>
        <label>product name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>validity__c</fullName>
        <label>validity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>